Sun Jul 24 04:27:10 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/APG/Streams/Answerer.cpp:

          Fuzz fixes.

Sat Jul 23 22:37:24 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-win64.h:
        * examples/APG/Timers/PCB.cpp:

          Fuzz fixes.

        * bin/fuzz.pl:

          Enhanced the check for ACE_TRACE messages so that it works
          correctly with class definitions such as those found in
          examples/APG/ThreadPools/Futures.cpp.

Fri Jul 22 12:29:59 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Malloc_T.cpp: Fixed ACE_Dynamic_Cached_Allocator so that it
          doesn't overflow.  Thanks to Qiao Zhiqiang <qiaozhiqiang at
          leadcoretech dot com> for this fix.

Fri Jul 22 12:27:16 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Cached_Allocator_Test.cpp (run_main): Updated this test to
          check that ACE_Dynamic_Cached_Allocator works properly.

Wed Jul 20 23:52:46 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/config-win64.h: Added this file to make it more clear how to
          build ACE on a 64-bit Windows platform.  Thanks to Thomas Pauli
          <thomas dot pauli at tu-dortmund dot de> for contributing this
          fix.

Mon Jul 18 11:44:16 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Happy Birthday to me ;-)

Mon Jul 11 00:39:05 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/APG/ThreadPools/Futures.cpp (class Manager):
        * examples/APG/Containers/Stacks.cpp (StackExample::run):
        * examples/APG/Containers/Allocator.cpp (StackExample::run):
        * examples/APG/Timers/PCB.cpp (PCB::handleClose): Fixed a mismatch in ACE_TRACE.

Sat Jul  9 19:07:20 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/RB_Tree.inl,
          ace/Svc_Handler.cpp,
          examples/APG/Active_Objects/AO.cpp,